--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -32,6 +32,7 @@ header{
     justify-content: space-between;
     align-items: center;
     height: 100%;
+    width: 100%;
 }
 
 .headerImg{
@@ -46,11 +47,14 @@ header{
 
 .headerMenu{
     display: flex;
+    width: 100%;
+    height: 100%;
 }
 .headerMenuLeft{
     display: flex;
     height: 60px;
     padding-bottom: 10px;
+    width: 100%;
 }
 .menuContainer{
     display: flex;
@@ -110,8 +114,9 @@ header{
     display: flex;
 }
 .welcome{
-    margin: auto;
     text-align: right;
+    display: flex;
+    align-items: center;
 }
 .notificationsMenu{
     margin-left: 10px;
