--- a/src/main/resources/static/css/mymodify.css
+++ b/src/main/resources/static/css/mymodify.css
@@ -51,6 +51,17 @@
 .editImg{
     padding-left: 55px;
 }
+textarea{
+    width: 500px;
+    height: 250px;
+    font-size:14px;
+    border: solid 1px #87AF6E;
+    border-radius: 5px;
+    margin: 5px 5px 5px 5px;
+    padding-left: 5px;
+    resize: none;
+    white-space: pre;
+}
 .saveBtnDiv{
     width: 200px;
     margin: 20px 5px 30px 5px;
