--- a/src/main/resources/static/css/selfStudy.css
+++ b/src/main/resources/static/css/selfStudy.css
@@ -1,6 +1,7 @@
 body, html{
     width: 100%;
     height: 100%;
+    margin: 0px;
 }
 *{
     font-family: 'NanumSquareNeo';
@@ -67,24 +68,33 @@ body, html{
     width: 60%;
     height: 100%;
     display: flex;
+    justify-content: space-around;
 }
 .hour{
     width: 30%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 .hour:after{
     content: ":";
+    margin: 55px 6.5px;
 }
 .minute{
-   width: 30%;
-   height: 100%;
+    width: 30%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 .minute:after{
     content: ":";
+    margin: 55px 6.5px;
 }
 .second{
-  width: 30%;
-  height: 100%;
+    width: 30%;
+    height: 100%;
 }
 .controllerBtn{
     width: 100%;
@@ -153,6 +163,8 @@ body, html{
 .time{
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: space-evenly;
 }
 .changeBtn{
     height: 80%;
@@ -169,7 +181,7 @@ body, html{
 
 .metaCanvas{
     width: 100%;
-    height: 84%;
+    height: 85%;
     margin: 10px 0px;
 }
 .metaCanvas canvas{
