--- a/src/main/resources/templates/MyPage/ModifyMemberInfo.html
+++ b/src/main/resources/templates/MyPage/ModifyMemberInfo.html
@@ -3,7 +3,7 @@
       xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>MyPage</title>
+    <title>개인정보 수정</title>
     <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/mymenu.css">
     <link rel="stylesheet" type="text/css" href="/css/mymodify.css">
@@ -36,11 +36,6 @@
                         <div class="categoryMenu">
                             <a href="/meta">
                                 <span>스터디룸</span>
-                            </a>
-                        </div>
-                        <div class="categoryMenu">
-                            <a href="/noticeroom">
-                                <span>게시판</span>
                             </a>
                         </div>
                         <div class="categoryMenu">
@@ -228,7 +223,7 @@
 
                         <div class="inputForm">
                             <div class="editTitle">자기소개</div>
-                            <input name="selfIntro" th:value="${member.selfIntro}" class="inputText" type="text">
+                            <textarea name="selfIntro" th:text="${member.selfIntro}"> </textarea>
                         </div>
 
                         <div class="saveBtnDiv">
@@ -284,23 +279,6 @@
 <!--JS----------------------------------------------------------------------------------------------------------------->
     <!-- Ajax사용을 위한 js를 추가 -->
     <script src="/js/httpRequest.js"></script>
-
-    <script>
-        var acc = document.getElementsByClassName("accordion");
-        var i;
-
-        for (i = 0; i < acc.length; i++) {
-            acc[i].addEventListener("click", function () {
-                this.classList.toggle("active");
-                var panel = this.nextElementSibling;
-                if (panel.style.maxHeight) {
-                    panel.style.maxHeight = null;
-                } else {
-                    panel.style.maxHeight = panel.scrollHeight + "px";
-                }
-            });
-        }
-    </script>
 
     <!--닉네임 중복체크 및 글자 수 제한-->
     <script>
@@ -508,27 +486,7 @@
         }
     </script>
 
-    <script>
-        const icon = document.querySelector('.icon');
-        const notiDrop = document.querySelector('.notiDrop');
-        let status = 0; //0이면 클릭 안된 상태, 1이면 클릭 된 상태
-
-        function menuOpen(e){
-            if ( e == 1 ){
-                notiDrop.style.display = "block";
-            } else {
-                notiDrop.style.display = "none";
-            }
-        }
-        icon.addEventListener('click', function () {
-            if( status == 0 ){
-                status = 1;
-                menuOpen(status);
-            } else{
-                status = 0;
-                menuOpen(status);
-            }
-        });
-    </script>
+    <script src="/js/noti.js" defer></script>
+    <script src="/js/menuAccordion.js" defer></script>
 </body>
 </html>
